<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_margin="4dp">

    <TextView
        android:id="@+id/tv_cart_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prod"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_cart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price" />

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.Material3.Button.TonalButton"
        android:text="@string/remove"
        android:layout_marginTop="8dp"/>
</LinearLayout>
